Moved dynamic variables from ConfigConstants to RuntimeConfig